--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     </head>
 
     <body>
-
-        <p>Hello, world!</p>
+        <canvas id="gameCanvas"></canvas>
 
         <script type="module" src="js/main.js"></script>
     </body>
