--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
     <head>
         <meta charset="utf-8">
-        <title></title>
-        <meta name="author" content="">
+        <title>Memory Game</title>
+        <meta name="author" content="axowatl">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
