--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
   h1 {
     margin-top: 20px;
   }
+  #game-controls {
+    margin: 10px;
+  }
   #game-board {
     display: grid;
-    grid-template-columns: repeat(4, 100px);
     gap: 10px;
     justify-content: center;
     margin: 20px auto;
   }
+  /* Grid template will be set dynamically based on columns/rows */
   .card {
     width: 100px;
     height: 100px;
     background-color: #444;
     color: #fff;
-    font-size: 2em;
+    font-size: 1.5em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -44,16 +47,40 @@
     margin-top: 20px;
     font-size: 1.2em;
   }
+  /* Style for input controls */
+  #inputs {
+    margin-top: 10px;
+  }
 </style>
 </head>
 <body>
 
 <h1>Memory Match Game</h1>
+
+<div id="inputs">
+  <label>
+    Rows:
+    <input type="number" id="rows" min="2" max="10" value="4" />
+  </label>
+  <label>
+    Columns:
+    <input type="number" id="columns" min="2" max="10" value="4" />
+  </label>
+  <button onclick="startGame()">Start Game</button>
+</div>
+
+<div id="game-controls">
+  <!-- Optional: Add buttons or controls here -->
+</div>
+
 <div id="game-board"></div>
 <div id="status"></div>
 
 <script>
-  const images = ['🍎', '🍌', '🍇', '🍓', '🍍', '🥝', '🍉', '🍑'];
+  // You can modify this array to set your own pairs of labels
+  // Make sure the total number of labels matches (rows * columns) / 2
+  let labels = ['Apple', 'Banana', 'Cherry', 'Date', 'Eggplant', 'Fig', 'Grape', 'Honeydew'];
+
   let cards = [];
   let firstCard = null;
   let secondCard = null;
@@ -70,15 +97,46 @@
     }
   }
 
-  function initializeGame() {
-    // Create pairs of cards
+  function startGame() {
+    // Read grid dimensions
+    const rows = parseInt(document.getElementById('rows').value);
+    const columns = parseInt(document.getElementById('columns').value);
+    const totalCards = rows * columns;
+
+    // Check if totalCards is even
+    if (totalCards % 2 !== 0) {
+      alert('Total number of cards must be even.');
+      return;
+    }
+
+    // Prepare labels for pairs
+    const numPairs = totalCards / 2;
+
+    if (labels.length < numPairs) {
+      alert(`Please add at least ${numPairs} labels in the labels array.`);
+      return;
+    }
+
+    // Create the card pairs
     cards = [];
-    images.forEach((img) => {
-      cards.push({ id: img + Math.random(), value: img, matched: false });
-      cards.push({ id: img + Math.random(), value: img, matched: false });
-    });
+    for (let i=0; i<numPairs; i++) {
+      const label = labels[i];
+      // Create two cards for each label
+      cards.push({ id: label + Math.random(), value: label, matched: false });
+      cards.push({ id: label + Math.random(), value: label, matched: false });
+    }
+
+    // Shuffle cards
     shuffle(cards);
+
+    // Set grid template
+    board.style.display = 'grid';
+    board.style.gridTemplateColumns = `repeat(${columns}, 100px)`;
+
+    // Render the board
     renderBoard();
+
+    // Reset game state
     firstCard = null;
     secondCard = null;
     lockBoard = false;
@@ -103,14 +161,16 @@
 
     const index = e.currentTarget.dataset.index;
     const card = cards[index];
-    if (card.matched || e.currentTarget.classList.contains('flipped')) return;
+    const cardElement = e.currentTarget;
 
-    flipCard(e.currentTarget, card);
+    if (card.matched || cardElement.classList.contains('flipped')) return;
+
+    flipCard(cardElement, card);
 
     if (!firstCard) {
-      firstCard = { card, element: e.currentTarget };
-    } else if (!secondCard && e.currentTarget !== firstCard.element) {
-      secondCard = { card, element: e.currentTarget };
+      firstCard = { card, element: cardElement };
+    } else if (!secondCard && cardElement !== firstCard.element) {
+      secondCard = { card, element: cardElement };
       checkForMatch();
     }
   }
@@ -127,14 +187,15 @@
 
   function checkForMatch() {
     if (firstCard.card.value === secondCard.card.value) {
-      // Match found
+      // Match
       firstCard.card.matched = true;
       secondCard.card.matched = true;
       firstCard.element.classList.add('matched');
       secondCard.element.classList.add('matched');
       resetSelection();
       matchesFound++;
-      if (matchesFound === images.length) {
+      const totalPairs = (parseInt(document.getElementById('rows').value) * parseInt(document.getElementById('columns').value)) /2;
+      if (matchesFound === totalPairs) {
         statusDiv.textContent = 'Congratulations! You matched all pairs!';
       }
     } else {
@@ -155,7 +216,9 @@
   }
 
   // Initialize game on page load
-  window.onload = initializeGame;
+  window.onload = () => {
+    startGame();
+  };
 </script>
 
 </body>
